@@ -1,16 +1,16 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-#' Fourth Example
+#' spdlog Example using a sink for R
 #'
-#' A simple example invoking a derived Rcpp logger.
+#' A simple example invoking a derived R/Rcpp logger.
 #'
 #' Note that this no longer triggers R warnings thanks to excellent help by
 #' Gabi Melman.
 #' @return None
 #' @examples
-#' exampleFour()
-exampleFour <- function() {
-    invisible(.Call(`_RcppSpdlog_exampleFour`))
+#' exampleRsink()
+exampleRsink <- function() {
+    invisible(.Call(`_RcppSpdlog_exampleRsink`))
 }
 
