@@ -1,21 +1,21 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RcppExports.R
-\name{exampleFour}
-\alias{exampleFour}
-\title{Fourth Example}
+\name{exampleRsink}
+\alias{exampleRsink}
+\title{spdlog Example using a sink for R}
 \usage{
-exampleFour()
+exampleRsink()
 }
 \value{
 None
 }
 \description{
-A simple example invoking a derived Rcpp logger.
+A simple example invoking a derived R/Rcpp logger.
 }
 \details{
 Note that this no longer triggers R warnings thanks to excellent help by
 Gabi Melman.
 }
 \examples{
-exampleFour()
+exampleRsink()
 }
