@@ -1,17 +1,23 @@
 
+// this define is important to not include another logger pulling in stdout
+#define SPDLOG_DISABLE_DEFAULT_LOGGER 1
+
+// this portmanteau include also defines the r_sink we use below, and which
+// diverts all logging to R via the Rcpp::Rcout replacement for std::cout
 #include <RcppSpdlog>
 
-//' Fourth Example
+//' spdlog Example using a sink for R
 //'
-//' A simple example invoking a derived Rcpp logger.
+//' A simple example invoking a derived R/Rcpp logger.
 //'
 //' Note that this no longer triggers R warnings thanks to excellent help by
 //' Gabi Melman.
 //' @return None
 //' @examples
-//' exampleFour()
+//' exampleRsink()
 // [[Rcpp::export]]
-void exampleFour() {
+void exampleRsink() {
+
     std::string logname = "fromR"; 							// fix a name for this logger
     auto sp = spdlog::get(logname);       					// retrieve existing one
     if (sp == nullptr) sp = spdlog::r_sink_mt(logname);   	// or create new one if needed
