@@ -1,3 +1,10 @@
+2020-08-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/exampleRsink.cpp: Renamed from exampleFour()
+	* man/exampleRsink.Rd: Idem
+	* src/RcppExports.cpp: Updated
+	* R/RcppExports.R: Idem
+
 2020-08-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/RcppSpdlog: Easy wrapper for spdlog and R sink
